# tap-polygon

./: README.md  meltano.yml  pyproject.toml  tox.ini
tap_polygon/: __init__.py  __main__.py  base_streams.py  client.py  crypto_streams.py  economy_streams.py  indices_streams.py  option_streams.py  stock_streams.py  streams.py  tap.py  utils.py
tests/: __init__.py  test_core.py
