[tool.poetry]
name = "tap-polygon"
version = "0.0.1"
description = "Singer tap for Polygon, built with the Meltano Singer SDK."
authors = ["Matt Elgazar <melgazar9@gmail.com>"]
readme = "README.md"
license = "Apache-2.0"
keywords = ["ELT", "Polygon"]
packages = [{ include = "tap_polygon" }]

[tool.poetry.dependencies]
python = ">=3.10,<4.0"
singer-sdk = "~0.46.3"
requests = "~2.32.3"
fs-s3fs = { version = "~1.1.1", optional = true }
polygon-api-client = "^1.14.5"

[tool.poetry.extras]
s3 = ["fs-s3fs"]

[tool.poetry.scripts]
tap-polygon = "tap_polygon.tap:TapPolygon.cli"

[tool.poetry.group.dev.dependencies]
pytest = "^8.0"
singer-sdk = { version = "~0.46.3", extras = ["testing"] }


[tool.pytest.ini_options]
addopts = ["--durations=10"]

[tool.mypy]
warn_unused_configs = true

[tool.ruff]
target-version = "py39"

[tool.ruff.lint]
ignore = ["COM812"]
select = ["ALL"]

[tool.ruff.lint.flake8-annotations]
allow-star-arg-any = true

[tool.ruff.lint.pydocstyle]
convention = "google"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

