[project]
name = "tap-polygon"
version = "0.0.1"
description = "Singer tap for Polygon, built with the Meltano Singer SDK."
authors = [{name = "Matt Elgazar", email = "melgazar9@gmail.com"}]
readme = "README.md"
license = {text = "Apache-2.0"}
keywords = ["ELT", "Polygon"]
requires-python = ">=3.10,<4.0"

dependencies = [
    "singer-sdk~=0.46.3",
    "requests~=2.32.3",
    "polygon-api-client>=1.14.5"
]

[project.optional-dependencies]
s3 = ["fs-s3fs~=1.1.1"]
dev = [
    "pytest>=8.0",
    "singer-sdk[testing]~=0.46.3"
]

[project.scripts]
tap-polygon = "tap_polygon.tap:TapPolygon.cli"


[tool.pytest.ini_options]
addopts = ["--durations=10"]

[tool.mypy]
warn_unused_configs = true

[tool.ruff]
target-version = "py39"

[tool.ruff.lint]
ignore = ["COM812"]
select = ["ALL"]

[tool.ruff.lint.flake8-annotations]
allow-star-arg-any = true

[tool.ruff.lint.pydocstyle]
convention = "google"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

